tests/snapshots/snapshots__fixture_log_kv_subdir_level2.snap
---
source: tests/snapshots.rs
expression: output
---
error.rs
     5→pub struct Error {
    10→enum Inner {
    19→impl Error {
    21→    pub fn msg(msg: &'static str) -> Self {
    29→    pub(super) fn from_value(err: crate::kv::value::inner::Error) -> Self {
    37→    pub(super) fn into_value(self) -> crate::kv::value::inner::Error {
    48→impl fmt::Display for Error {
    49→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    62→impl From<fmt::Error> for Error {
    63→    fn from(_: fmt::Error) -> Self {
    69→mod std_support {
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;
    75→    impl Error {
    77→        pub fn boxed<E>(err: E) -> Self
    87→    impl error::Error for Error {}
    89→    impl From<io::Error> for Error {
    90→        fn from(err: io::Error) -> Self {
key.rs
     7→pub trait ToKey {
     9→    fn to_key(&self) -> Key<'_>;
    12→impl<T> ToKey for &T
    16→    fn to_key(&self) -> Key<'_> {
    21→impl<'k> ToKey for Key<'k> {
    22→    fn to_key(&self) -> Key<'_> {
    27→impl ToKey for str {
    28→    fn to_key(&self) -> Key<'_> {
    37→pub struct Key<'k> {
    42→impl<'k> Key<'k> {
    45→    pub fn from_str(key: &'k str) -> Self {
    53→    pub fn as_str(&self) -> &str {
    61→    pub fn to_borrowed_str(&self) -> Option<&'k str> {
    69→impl<'k> fmt::Display for Key<'k> {
    70→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    75→impl<'k> AsRef<str> for Key<'k> {
    76→    fn as_ref(&self) -> &str {
    81→impl<'k> Borrow<str> for Key<'k> {
    82→    fn borrow(&self) -> &str {
    87→impl<'k> From<&'k str> for Key<'k> {
    88→    fn from(s: &'k str) -> Self {
    94→mod std_support {
    99→    impl ToKey for String {
   100→        fn to_key(&self) -> Key<'_> {
   105→    impl<'a> ToKey for Cow<'a, str> {
   106→        fn to_key(&self) -> Key<'_> {
   113→mod sval_support {
   119→    impl<'a> Value for Key<'a> {
   120→        fn stream<'sval, S: sval::Stream<'sval> + ?Sized>(
   128→    impl<'a> ValueRef<'a> for Key<'a> {
   129→        fn stream_ref<S: sval::Stream<'a> + ?Sized>(&self, stream: &mut S) -> sval::Result {
   136→mod serde_support {
   141→    impl<'a> Serialize for Key<'a> {
   142→        fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   260→pub mod source;
   262→pub mod value;
source.rs
    51→pub trait Source {
    62→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error>;
    73→    fn get(&self, key: Key) -> Option<Value<'_>> {
    85→    fn count(&self) -> usize {
    91→fn get_default<'v>(source: &'v (impl Source + ?Sized), key: Key) -> Option<Value<'v>> {
   114→fn count_default(source: impl Source) -> usize {
   130→impl<T> Source for &T
   134→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   138→    fn get(&self, key: Key) -> Option<Value<'_>> {
   142→    fn count(&self) -> usize {
   147→impl<K, V> Source for (K, V)
   152→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   156→    fn get(&self, key: Key) -> Option<Value<'_>> {
   164→    fn count(&self) -> usize {
   169→impl<S> Source for [S]
   173→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   181→    fn get(&self, key: Key) -> Option<Value<'_>> {
   191→    fn count(&self) -> usize {
   196→impl<const N: usize, S> Source for [S; N]
   200→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   204→    fn get(&self, key: Key) -> Option<Value<'_>> {
   208→    fn count(&self) -> usize {
   213→impl<S> Source for Option<S>
   217→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   225→    fn get(&self, key: Key) -> Option<Value<'_>> {
   229→    fn count(&self) -> usize {
   235→pub trait VisitSource<'kvs> {
   237→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error>;
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   245→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error> {
   250→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugMap<'a, 'b> {
   251→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error> {
   257→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugList<'a, 'b> {
   258→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error> {
   264→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugSet<'a, 'b> {
   265→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error> {
   271→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugTuple<'a, 'b> {
   272→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error> {
   280→mod std_support {
   288→    impl<S> Source for Box<S>
   292→        fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   296→        fn get(&self, key: Key) -> Option<Value<'_>> {
   300→        fn count(&self) -> usize {
   305→    impl<S> Source for Arc<S>
   309→        fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   313→        fn get(&self, key: Key) -> Option<Value<'_>> {
   317→        fn count(&self) -> usize {
   322→    impl<S> Source for Rc<S>
   326→        fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   330→        fn get(&self, key: Key) -> Option<Value<'_>> {
   334→        fn count(&self) -> usize {
   339→    impl<S> Source for Vec<S>
   343→        fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   347→        fn get(&self, key: Key) -> Option<Value<'_>> {
   351→        fn count(&self) -> usize {
   356→    impl<'kvs, V> VisitSource<'kvs> for Box<V>
   360→        fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error> {
   365→    impl<K, V, S> Source for HashMap<K, V, S>
   371→        fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   378→        fn get(&self, key: Key) -> Option<Value<'_>> {
   382→        fn count(&self) -> usize {
   387→    impl<K, V> Source for BTreeMap<K, V>
   392→        fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error> {
   399→        fn get(&self, key: Key) -> Option<Value<'_>> {
   403→        fn count(&self) -> usize {
value.rs
    11→pub trait ToValue {
    13→    fn to_value(&self) -> Value<'_>;
    16→impl<T> ToValue for &T
    20→    fn to_value(&self) -> Value<'_> {
    25→impl<'v> ToValue for Value<'v> {
    26→    fn to_value(&self) -> Value<'_> {
   119→pub struct Value<'v> {
   123→impl<'v> Value<'v> {
   125→    pub fn from_any<T>(value: &'v T) -> Self
   133→    pub fn from_debug<T>(value: &'v T) -> Self
   143→    pub fn from_display<T>(value: &'v T) -> Self
   154→    pub fn from_serde<T>(value: &'v T) -> Self
   165→    pub fn from_sval<T>(value: &'v T) -> Self
   175→    pub fn from_dyn_debug(value: &'v dyn fmt::Debug) -> Self {
   182→    pub fn from_dyn_display(value: &'v dyn fmt::Display) -> Self {
   190→    pub fn from_dyn_error(err: &'v (dyn std::error::Error + 'static)) -> Self {
   197→    pub fn null() -> Self {
   204→    fn from_inner<T>(value: T) -> Self
   217→    pub fn visit(&self, visitor: impl VisitValue<'v>) -> Result<(), Error> {
   222→impl<'v> fmt::Debug for Value<'v> {
   223→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   228→impl<'v> fmt::Display for Value<'v> {
   229→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   235→impl<'v> serde_core::Serialize for Value<'v> {
   236→    fn serialize<S>(&self, s: S) -> Result<S::Ok, S::Error>
   245→impl<'v> sval::Value for Value<'v> {
   246→    fn stream<'sval, S: sval::Stream<'sval> + ?Sized>(&'sval self, stream: &mut S) -> sval::Result {
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v> {
   253→    fn stream_ref<S: sval::Stream<'v> + ?Sized>(&self, stream: &mut S) -> sval::Result {
   258→impl ToValue for str {
   259→    fn to_value(&self) -> Value<'_> {
   264→impl<'v> From<&'v str> for Value<'v> {
   265→    fn from(value: &'v str) -> Self {
   270→impl ToValue for () {
   271→    fn to_value(&self) -> Value<'_> {
   276→impl<T> ToValue for Option<T>
   280→    fn to_value(&self) -> Value<'_> {
   288→macro_rules! impl_to_value_primitive {
   312→macro_rules! impl_to_value_nonzero_primitive {
   336→macro_rules! impl_value_to_primitive {
   376→impl<'v> Value<'v> {
   379→    pub fn to_borrowed_error(&self) -> Option<&(dyn std::error::Error + 'static)> {
   384→    pub fn to_borrowed_str(&self) -> Option<&'v str> {
   390→mod std_support {
   397→    impl<T> ToValue for Box<T>
   401→        fn to_value(&self) -> Value<'_> {
   406→    impl<T> ToValue for Arc<T>
   410→        fn to_value(&self) -> Value<'_> {
   415→    impl<T> ToValue for Rc<T>
   419→        fn to_value(&self) -> Value<'_> {
   424→    impl ToValue for String {
   425→        fn to_value(&self) -> Value<'_> {
   430→    impl<'v> ToValue for Cow<'v, str> {
   431→        fn to_value(&self) -> Value<'_> {
   436→    impl<'v> Value<'v> {
   438→        pub fn to_cow_str(&self) -> Option<Cow<'v, str>> {
   443→    impl<'v> From<&'v String> for Value<'v> {
   444→        fn from(v: &'v String) -> Self {
   462→pub trait VisitValue<'v> {
   469→    fn visit_any(&mut self, value: Value) -> Result<(), Error>;
   472→    fn visit_null(&mut self) -> Result<(), Error> {
   477→    fn visit_u64(&mut self, value: u64) -> Result<(), Error> {
   482→    fn visit_i64(&mut self, value: i64) -> Result<(), Error> {
   487→    fn visit_u128(&mut self, value: u128) -> Result<(), Error> {
   492→    fn visit_i128(&mut self, value: i128) -> Result<(), Error> {
   497→    fn visit_f64(&mut self, value: f64) -> Result<(), Error> {
   502→    fn visit_bool(&mut self, value: bool) -> Result<(), Error> {
   507→    fn visit_str(&mut self, value: &str) -> Result<(), Error> {
   512→    fn visit_borrowed_str(&mut self, value: &'v str) -> Result<(), Error> {
   517→    fn visit_char(&mut self, value: char) -> Result<(), Error> {
   524→    fn visit_error(&mut self, err: &(dyn std::error::Error + 'static)) -> Result<(), Error> {
   530→    fn visit_borrowed_error(
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   543→    fn visit_any(&mut self, value: Value) -> Result<(), Error> {
   547→    fn visit_null(&mut self) -> Result<(), Error> {
   551→    fn visit_u64(&mut self, value: u64) -> Result<(), Error> {
   555→    fn visit_i64(&mut self, value: i64) -> Result<(), Error> {
   559→    fn visit_u128(&mut self, value: u128) -> Result<(), Error> {
   563→    fn visit_i128(&mut self, value: i128) -> Result<(), Error> {
   567→    fn visit_f64(&mut self, value: f64) -> Result<(), Error> {
   571→    fn visit_bool(&mut self, value: bool) -> Result<(), Error> {
   575→    fn visit_str(&mut self, value: &str) -> Result<(), Error> {
   579→    fn visit_borrowed_str(&mut self, value: &'v str) -> Result<(), Error> {
   583→    fn visit_char(&mut self, value: char) -> Result<(), Error> {
   588→    fn visit_error(&mut self, err: &(dyn std::error::Error + 'static)) -> Result<(), Error> {
   593→    fn visit_borrowed_error(
   602→pub(in crate::kv) mod inner {
   619→    pub fn visit<'v>(
   721→pub(in crate::kv) mod inner {
   738→    pub enum Inner<'v> {
   752→    impl<'v> From<()> for Inner<'v> {
   753→        fn from(_: ()) -> Self {
   758→    impl<'v> From<bool> for Inner<'v> {
   759→        fn from(v: bool) -> Self {
   764→    impl<'v> From<char> for Inner<'v> {
   765→        fn from(v: char) -> Self {
   770→    impl<'v> From<f32> for Inner<'v> {
   771→        fn from(v: f32) -> Self {
   776→    impl<'v> From<f64> for Inner<'v> {
   777→        fn from(v: f64) -> Self {
   782→    impl<'v> From<i8> for Inner<'v> {
   783→        fn from(v: i8) -> Self {
   788→    impl<'v> From<i16> for Inner<'v> {
   789→        fn from(v: i16) -> Self {
   794→    impl<'v> From<i32> for Inner<'v> {
   795→        fn from(v: i32) -> Self {
   800→    impl<'v> From<i64> for Inner<'v> {
   801→        fn from(v: i64) -> Self {
   806→    impl<'v> From<isize> for Inner<'v> {
   807→        fn from(v: isize) -> Self {
   812→    impl<'v> From<u8> for Inner<'v> {
   813→        fn from(v: u8) -> Self {
   818→    impl<'v> From<u16> for Inner<'v> {
   819→        fn from(v: u16) -> Self {
   824→    impl<'v> From<u32> for Inner<'v> {
   825→        fn from(v: u32) -> Self {
   830→    impl<'v> From<u64> for Inner<'v> {
   831→        fn from(v: u64) -> Self {
   836→    impl<'v> From<usize> for Inner<'v> {
   837→        fn from(v: usize) -> Self {
   842→    impl<'v> From<i128> for Inner<'v> {
   843→        fn from(v: i128) -> Self {
   848→    impl<'v> From<u128> for Inner<'v> {
   849→        fn from(v: u128) -> Self {
   854→    impl<'v> From<&'v str> for Inner<'v> {
   855→        fn from(v: &'v str) -> Self {
   860→    impl<'v> fmt::Debug for Inner<'v> {
   861→        fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   878→    impl<'v> fmt::Display for Inner<'v> {
   879→        fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   896→    impl<'v> Inner<'v> {
   897→        pub fn from_debug<T: fmt::Debug>(value: &'v T) -> Self {
   901→        pub fn from_display<T: fmt::Display>(value: &'v T) -> Self {
   905→        pub fn from_dyn_debug(value: &'v dyn fmt::Debug) -> Self {
   909→        pub fn from_dyn_display(value: &'v dyn fmt::Display) -> Self {
   913→        pub fn empty() -> Self {
   917→        pub fn to_bool(&self) -> Option<bool> {
   924→        pub fn to_char(&self) -> Option<char> {
   931→        pub fn to_f64(&self) -> Option<f64> {
   954→        pub fn to_i64(&self) -> Option<i64> {
   964→        pub fn to_u64(&self) -> Option<u64> {
   974→        pub fn to_u128(&self) -> Option<u128> {
   984→        pub fn to_i128(&self) -> Option<i128> {
   994→        pub fn to_borrowed_str(&self) -> Option<&'v str> {
  1031→    pub fn visit<'v>(
  1051→impl<'v> Value<'v> {
  1055→    pub fn capture_debug<T>(value: &'v T) -> Self
  1065→    pub fn capture_display<T>(value: &'v T) -> Self
  1075→    pub fn capture_error<T>(err: &'v T) -> Self
  1085→    pub fn capture_serde<T>(value: &'v T) -> Self
  1095→    pub fn capture_sval<T>(value: &'v T) -> Self
  1107→    pub fn is<T: 'static>(&self) -> bool {
  1116→    pub fn downcast_ref<T: 'static>(&self) -> Option<&T> {
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {
