tests/snapshots/snapshots__fixture_mdbook_cli_subdir_level2.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# Command-line tool
arg-watcher.md
     1→#### `--watcher`
build.md
     1→# The build command
    16→#### Specify a directory
    25→#### `--open`
    30→#### `--dest-dir`
clean.md
     1→# The clean command
    10→#### Specify a directory
    19→#### `--dest-dir`
completions.md
     1→# The completions command
init.md
     1→# The init command
    32→#### Tip: Generate chapters from SUMMARY.md
    39→#### Specify a directory
    48→#### `--theme`
    56→#### `--title`
    65→#### `--ignore`
    80→#### `--force`
serve.md
     1→# The serve command
    18→#### Specify a directory
    27→### Server options
    35→#### `--open`
    40→#### `--dest-dir`
    49→#### Specify exclude patterns
test.md
     1→# The test command
    11→#### Disable tests on a code block
    31→#### Specify a directory
    40→#### `--library-path`
    57→#### `--chapter`
watch.md
     1→# The watch command
     9→#### Specify a directory
    18→#### `--open`
    23→#### `--dest-dir`
    32→#### Specify exclude patterns
