tests/snapshots/snapshots__fixture_mdbook_format_subdir.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# Format
configuration/README.md
     1→# Configuration
configuration/environment-variables.md
     1→# Environment variables
configuration/general.md
     1→# General configuration
    31→## Supported configuration options
    37→### General metadata
    64→### Rust options
    85→### Build options
configuration/preprocessors.md
     1→# Configuring Preprocessors
    26→## Custom preprocessor configuration
    45→## Locking a preprocessor dependency to a renderer
    55→## Provide your own command
    67→### Optional preprocessors
    79→## Require a certain order
configuration/renderers.md
     1→# Configuring Renderers
    20→## Output tables
    59→### Custom backend commands
    71→### Optional backends
    84→## HTML renderer options
   176→### `[output.html.print]`
   191→### `[output.html.fold]`
   206→### `[output.html.playground]`
   230→### `[output.html.code]`
   244→### `[output.html.search]`
   286→#### `[output.html.search.chapter]`
   300→### `[output.html.redirect]`
   325→## Markdown renderer
example.rs
     1→fn main
markdown.md
     1→# Markdown
     9→## Text and paragraphs
    25→## Headings
    39→### A heading
    43→#### A smaller heading
    47→## Lists
    69→## Links
   108→## Images
   127→## Extensions
   131→### Strikethrough
   146→### Footnotes
   171→### Tables
   191→### Task lists
   208→### Smart punctuation
   231→### Heading attributes
   244→### Definition lists
   279→### Admonitions
mathjax.md
     1→# MathJax support
    24→### Inline equations
    32→### Block equations
mdbook.md
     1→# mdBook-specific features
     3→## Hiding code lines
    74→## Rust playground
   102→## Rust code block attributes
   133→## Including files
   154→## Including portions of a file
   215→## Including a file but initially hiding all except specified lines
   279→## Inserting runnable Rust files
   310→## Controlling page \<title\>
   319→## HTML classes provided by mdBook
   323→### `class="left"` and `"right"`
   331→### `class="hidden"`
   341→## Font-Awesome icons
summary.md
     1→# SUMMARY.md
    12→### Structure
    93→### Example
theme/README.md
     1→# Theme
theme/editor.md
     1→# Editor
    35→## Customizing the editor
theme/index-hbs.md
     1→# index.hbs
     9→## Data
    41→## Handlebars helpers
    46→### toc
    80→### resource
    90→### fa
theme/syntax-highlighting.md
     1→# Syntax highlighting
    17→## Supported languages
    68→## Custom theme
    82→## Improve default theme
